--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   },
   "dependencies": {
     "@barba/core": "^2.9.7",
+    "@react-three/fiber": "^8.13.6",
     "@studio-freight/lenis": "^1.0.19",
     "framer-motion": "^10.15.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.7"
-  },
-  "devDependencies": {
-    "babel-plugin-styled-components": "^2.1.4"
+    "three": "^0.155.0"
   }
 }
